# model-transparency

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Containerfile  DIRSHA256.md  README.md  README.model_signing.md  SECURITY.md  model.dockerfile  pyproject.toml  sign_model.py  verify_model.py
.github/: dependabot.yml  pull_request_template.md  pytype-problem-matcher.json
.github/workflows/: bench.yml  benchmarks.yml  cli.yml  codeql.yml  cross_os.yml  dependency_review.yml  docs.yml  integration.yml  lint.yml  model_signing.yml  pin_deps.yml  release.yml  scorecard.yml  slsa_for_ml.yml  unit_tests.yml  validate_deps.yml
.github/workflows/scripts/: venv_activate.sh  venv_setup.sh
benchmarks/: Containerfile  cloud_batch.json  exp_chunk.py  exp_disk.py  exp_hash.py  exp_shard.py  exp_worker.py  generate.py  run.sh  serialize.py  time_serialize.py
docs/: demo.ipynb  ml_dsa_examples.md  ml_dsa_implementation.md  ml_dsa_testing.md  model_signing_format.md
install/: requirements.in  requirements_Darwin.txt  requirements_Linux.txt  requirements_Windows.txt  requirements_dev_Darwin.txt  requirements_dev_Linux.txt  requirements_test_Linux.txt
model_signing/: README.md  __init__.py  __main__.py  _manifest.py  conftest.py  main.py  model.py  pyproject.toml  serialize.py  serialize_test.py  sign_and_verify_model.ipynb  test_support.py  verify.py
model_signing/benchmarks/: run.sh
model_signing/hashing/: file.py  file_test.py  hashing.py  memory.py  memory_test.py  precomputed.py  precomputed_test.py  types.py
model_signing/install/: requirements.in  requirements.test.txt  requirements.txt  requirements_Darwin.txt  requirements_Linux.txt  requirements_Windows.txt  requirements_dev.in  requirements_dev_Darwin.txt  requirements_dev_Linux.txt  requirements_mac.txt  requirements_macOS.txt  requirements_test.in  requirements_test_Darwin.txt  requirements_test_Linux.txt  requirements_test_Windows.txt  requirements_test_macOS.txt
model_signing/manifest/: manifest.py  manifest_test.py
model_signing/serialization/: conftest.py  dfs.py  dfs_test.py  fixtures.py  fixtures_constants.py  itemized.py  itemized_test.py  serialization.py  serialize_by_file.py  serialize_by_file_shard.py  serialize_by_file_shard_test.py  serialize_by_file_test.py  test_support.py
model_signing/serializing/: __init__.py  dfs.py  dfs_test.py  serializing.py
model_signing/signature/: encoding.py  fake.py  key.py  key_test.py  pki.py  signature.py  signing.py  sigstore.py  verifying.py
model_signing/signing/: as_bytes.py  ec_key.py  empty_signing.py  empty_signing_test.py  in_toto.py  in_toto_test.py  manifest.py  signing.py  sigstore.py
scripts/: ml_dsa_key_tool.py
scripts/pkcs11-tests/: softhsm_setup  test_pkcs11.sh
scripts/tests/: functions  sign_verify_test.py  test-sign-verify  test-sign-verify-allversions.sh  test-sign-verify-ml-dsa.sh  test-sign-verify.sh  test-verify-v0.2.0-certificate  test-verify-v0.3.1-certificate  test-verify-v0.3.1-elliptic-key  test-verify-v0.3.1-sigstore  test-verify-v1.0.0-certificate  test-verify-v1.0.0-certificate.sh  test-verify-v1.0.0-elliptic-key  test-verify-v1.0.0-sigstore  test-verify-v1.0.1-certificate.sh  test-verify-v1.0.1-elliptic-key.sh  test-verify-v1.0.1-sigstore.sh  test-verify-v1.1.0-certificate.sh  test-verify-v1.1.0-elliptic-key.sh  test-verify-v1.1.0-ml-dsa.sh  test-verify-v1.1.0-sigstore.sh  testrunner  verify_test.py
scripts/tests/v0.2.0-certificate/: model.sig
scripts/tests/v0.3.1-certificate/: model.sig  signme-1  signme-2
scripts/tests/v0.3.1-elliptic-key/: model.sig
scripts/tests/v0.3.1-sigstore/: model.sig
scripts/tests/v1.0.0-certificate/: model.sig
scripts/tests/v1.0.0-elliptic-key/: model.sig  signme-1
scripts/tests/v1.0.0-sigstore/: model.sig
scripts/tests/v1.0.1-certificate/: model.sig
scripts/tests/v1.0.1-elliptic-key/: model.sig
scripts/tests/v1.0.1-sigstore/: model.sig
scripts/tests/v1.1.0-certificate/: model.sig
scripts/tests/v1.1.0-elliptic-key/: model.sig
scripts/tests/v1.1.0-ml-dsa/: f0  f1  model.sig
scripts/tests/v1.1.0-sigstore/: model.sig
slsa_for_models/: README.md  github_actions.md  main.py  pytorch_cifar10.py  tensorflow_cifar10.py
slsa_for_models/gcp/: README.md  pipeline.yml  pipelinerun.yml
slsa_for_models/gcp/tasks/: build-model.yml  git-clone.yml  upload-model.yml
slsa_for_models/install/: requirements.in  requirements.txt  requirements_Darwin.txt  requirements_Linux.txt  requirements_Windows.txt  requirements_macOS.txt
slsa_for_models/kubeflow/: README.md  model_transparency.py
src/: private.pem  public.pem  sign.py  verify.py
src/model_signing/: __init__.py  __main__.py  _cli.py  api.py  hash.py  hashing.py  manifest.py  model.py  model_card.py  sign.py  signing.py  verification.py  verify.py  verifying.py
src/model_signing/_hashing/: file.py  gpu.py  hashing.py  io.py  memory.py
src/model_signing/_serialization/: file.py  file_shard.py  (+4 more)
tests/: _manifest_test.py  api_test.py  cli_ml_dsa_test.py  conftest.py  hashing_config_test.py  manifest_test.py  test_model_card.py  test_support.py
tests/_hashing/: file_hashing_test.py  file_test.py  gpu_test.py  io_hashing_test.py  memory_test.py
tests/_serialization/: file_shard_test.py  file_test.py  incremental_test.py  serialize_by_file_shard_test.py  serialize_by_file_test.py
tests/_signing/: format_compat_test.py  kms_test.py  pkcs11uri_test.py  sign_ml_dsa_test.py  signing_test.py  sigstore_test.py
tests/fuzzing/: fuzz_sign_then_mutate_verify_with_valid_key.py  fuzz_sign_verify_with_valid_key.py  fuzz_sign_with_invalid_key.py  fuzz_sign_with_valid_key_verify_with_invalid_key.py  fuzz_simple_sigstore.py  fuzz_utils.py  fuzz_with_cert_chain.py  utils.py
tests/hashing/: file_test.py  memory_test.py
tests/manifest/: manifest_test.py
tests/serialization/: serialize_by_file_shard_test.py  serialize_by_file_test.py
tests/signature/: key_test.py  pkcs11uri_test.py
tests/signing/: as_bytes_test.py  empty_signing_test.py  in_toto_signature_test.py  in_toto_test.py  signing_test.py  sigstore_test.py
(+179 files in other folders)
