[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "model_signing"
dynamic = ["version"]
description = "A tool for signing and verifying ML models"
readme = "README.model_signing.md"  # TODO: Merge READMEs and update
license = { file = "LICENSE" }
authors = [
  { name = "Sigstore Authors", email = "sigstore-dev@googlegroups.com" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  # TODO: trim list of dependencies and add here
  # TODO: optional dependencies for testing, benchmarking
]
requires-python = ">=3.11"
keywords = [
  "machine learning",
  "artificial intelligence",
  "model signing",
  "AI security",
  "ML security",
  "AI supply chain security",
  "ML supply chain security",
]

[project.urls]
Homepage = "https://pypi.org/project/model-signing/"
Changelog = "https://github.com/sigstore/model-transparency/blob/main/CHANGELOG.md"
# TODO: https://github.com/sigstore/model-transparency/pull/279 - Documentation = "...."
Source = "https://github.com/sigstore/model-transparency"
Issues = "https://github.com/sigstore/model-transparency/issues"
PyPI = "https://pypi.org/project/model-signing/"

[tool.hatch.version]
path = "src/model_signing/__init__.py"

[tool.hatch.build]
packages = ["src/model_signing"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "PLC", "PLE", "PT", "SIM", "W"]
ignore = ["B024"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing"]
